--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 [user]
 	signingkey = 8D2658F1
 	email = nabijaczleweli@gmail.com
-	name = nabijaczleweli
+	name = наб
 [color]
 	ui = auto
 [credential]
