--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
 [core]
 	longPaths = true
 	fscache = true
+	attributesFile = "~/.gitattributes"
 [commit]
 	gpgsign = true
 [gpg]
@@ -40,3 +41,9 @@
 	abbreviateCommands = true
 [tag]
 	sort = taggerdate
+[init]
+	defaultBranch = trunk
+[diff "man"]
+	xfuncname = "^\\.S[SHsh] .*"
+[safe]
+	directory = *
